# gol

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PROJECTPLAN.md  PROJECT_STATUS.md  README.md  REQUIREMENTS.md
bevy-game-of-life/: ARCHITECTURE.md  CLAUDE.md  CONSOLE_IMPROVEMENTS.md  Cargo.toml  README.md
bevy-game-of-life/benches/: grid_performance.rs
bevy-game-of-life/config/: blinker.json  glider.json  gosper_gun.json
bevy-game-of-life/src/: lib.rs  main.rs
bevy-game-of-life/src/components/: cell.rs  grid.rs  mod.rs
bevy-game-of-life/src/console/: app.rs  controller.rs  input.rs  mod.rs  renderer.rs
bevy-game-of-life/src/plugins/: game_of_life.rs  mod.rs
bevy-game-of-life/src/resources/: config.rs  grid_state.rs  mod.rs
bevy-game-of-life/src/systems/: bevy_integration.rs  game_of_life.rs  input.rs  mod.rs
bevy-game-of-life/tests/: bevy_ecs_tests.rs  config_tests.rs  game_logic_tests.rs  grid_boundary_tests.rs
entts-game-of-life/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CMakeLists_headeronly.txt  CMakeLists_minimal.txt  README.md  READY_TO_TEST.md  TESTING_GUIDE.md  test_input  test_input.cpp  test_minimal.cpp  test_simple_build.cpp  test_simple_console.cpp  vcpkg.json
entts-game-of-life/build_minimal/: Makefile  test_minimal
entts-game-of-life/config/: blinker.json  default.json  glider.json  gosper_gun.json
entts-game-of-life/include/console/: ConsoleInput.h  ConsoleRenderer.h  SimulationController.h
entts-game-of-life/include/core/: GameConfig.h  GameOfLifeSimulation.h
entts-game-of-life/include/core/components/: Cell.h  Position.h
entts-game-of-life/myenv/: pyvenv.cfg
entts-game-of-life/src/console/: ConsoleInput.cpp  ConsoleRenderer.cpp  SimulationController.cpp  main.cpp
entts-game-of-life/src/core/: GameConfig.cpp  GameOfLifeSimulation.cpp
entts-game-of-life/tests/core/: test_EntityLifecycle.cpp  test_GameConfig.cpp  test_GameOfLifeRules.cpp  test_GridBoundaries.cpp
entts-game-of-life/tests/integration/: test_HeadlessController.cpp  test_ModelViewSeparation.cpp  test_PatternPerformance.cpp  test_Performance.cpp
flecs-game-of-life/: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CMakeLists_minimal.txt  PROJECT_STATUS.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  test_core_only.cpp  test_headless.cpp  test_minimal.cpp  test_patterns.cpp  test_rules.cpp  test_structure_only.cpp  vcpkg.json
flecs-game-of-life/config/: default.json
flecs-game-of-life/config/patterns/: gosper_gun.json
flecs-game-of-life/examples/configs/: performance_test.json
flecs-game-of-life/examples/patterns/: blinker.json  glider.json
flecs-game-of-life/include/flecs_gol/: components.h  console_input.h  console_renderer.h  flecs_gol.h  game_config.h  game_of_life_simulation.h  simulation_controller.h
flecs-game-of-life/src/config/: game_config.cpp
flecs-game-of-life/src/console/: console_input.cpp  console_renderer.cpp  main.cpp
flecs-game-of-life/src/core/: game_of_life_simulation.cpp  simulation_controller.cpp
flecs-game-of-life/tests/performance/: benchmark_simulation.cpp
flecs-game-of-life/tests/unit/: test_flecs_entities.cpp  test_game_config.cpp  test_game_of_life_rules.cpp  test_grid_boundaries.cpp
gol-bevy/: Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  STATUS.md  build.rs
gol-bevy/benches/: performance_benchmark.rs
gol-bevy/completed/: bevy-validation.md  environment-setup.md
gol-bevy/src/: lib.rs  main.rs
gol-bevy/src/api/: handlers.rs  mod.rs  models.rs
gol-bevy/src/components/: cell_state.rs  integration_tests.rs  mod.rs  position.rs
gol-bevy/src/grpc/: mod.rs  service.rs
gol-bevy/src/resources/: grid_config.rs  mod.rs  simulation_state.rs  simulations.rs
gol-bevy/src/systems/: lifecycle_system.rs  mod.rs  neighbor_system.rs  scheduler_integration_test.rs  system_tests.rs
gol-bevy/tests/: grpc_integration_tests.rs
gol-console-client/: Cargo.toml  README.md  STATUS.md  build.rs
gol-console-client/completed/: console-validation.md
gol-console-client/src/: client.rs  main.rs
gol-console-client/src/commands/: control.rs  interactive.rs  load.rs  mod.rs  pattern.rs  run.rs  simulation.rs  status.rs  stop.rs
gol-console-client/src/ui/: display.rs  input.rs  interactive.rs  menu.rs  mod.rs
gol-console-client/tasks/: bevy-integration-demo.md
gol-entt/: README.md  STATUS.md
gol-entt/tasks/: cpp-environment-assessment.md  implement-entt-api.md  implement-entt-components.md  implement-entt-systems.md  setup-entt-project.md
gol-flecs/: README.md  STATUS.md
gol-flecs/tasks/: setup-flecs-project.md
meta/: STATUS.md
meta/completed/: claude-md-size-reduction.md  context-separation-strategy.md  create-implementation-readme-documentation.md
meta/coordination/: agent-integration-guide.md  audit-report.md  coordination-protocol.md  coordination-system.py  coordination-testing.md  coordination-utils.md  file-locks.json  implementation-report.md  task-classification-analysis.md  task-template.md
meta/docs/: agent-integration-guide.md  architecture.md  claude-code-best-practices-research.md  claude-md-rollback.md  claude-md-strategy.md  commands.md  coordination-system.md  current-workflow-analysis.md  development.md  documentation-first-process.md  github-api-response-formats.md  github-api-validation-report.md  modes.md  operations.md  orchestrator-coordination-guide.md  pattern-recognition-framework.md  process-pattern-library.md  process-pattern-recognition-system-summary.md  process-pattern-taxonomy.md  shutdown-process.md  tasks.md  user-testing-framework.md
meta/maintenance/: integration.md  procedures.md  schedule.md  test-results.md
meta/memory/: gap-resolution.md  validate-memory.sh  validation-checkpoints.md  validation-points.md  validation-procedures.sh  (+1 more)
patterns/: README.md  acorn.json  beacon.json  beehive.json  blinker.json  block.json  diehard.json  glider-gun.json  glider.json  lightweight-spaceship.json  toad.json
proto/: README.md  game_of_life.proto
templates/: completion-report-template.md  task-completion-template.md
(+55 files in other folders)
