[package]
name = "gol-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["multi_threaded"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
http-body = "1.0"
bytes = "1.0"
async-stream = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance_benchmark"
harness = false
