[package]
name = "gol-console-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.28"
ratatui = "0.28"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.12"
